# subcellos

./: .gitignore  coderabbit-report.txt  package-lock.json  package.json  timing_analysis.sh  vite.config.ts
docs/: AGENT_CONTEXT.md  DEV_LINUX.md  HANDOFF.md  STATUS.md
rpsx/: index.html  tsconfig.node.json
rpsx/src/: App.tsx  Shell.tsx  fsClient.ts  main.tsx  rpc.ts  synthParams.ts
rpsx/src/ark/: ArkDemo.tsx  ArkPreviewView.tsx  README_ARK_UI.md  ark-integrations.css  ark1bit.css  font.css  glyphs.ts  perfTest.ts  perfTest.tsx
rpsx/src/ark/hooks/: useGlitchFlash.ts  useOrbit.ts
rpsx/src/ark/primitives/: ArkBitmapText.tsx  ArkButton.tsx  ArkEncoder.tsx  ArkGlyph.tsx  ArkGrid.tsx  ArkLabel.tsx  (+3 more)
rpsx/src/components/: BrowserKeys.tsx  ErrorBoundary.tsx  LowResOverlay.tsx  ProjectBrowser.tsx  ProjectSettings.tsx  RightPane.tsx  SampleBrowser.tsx  SequencerRow.tsx  TopBar.tsx
rpsx/src/hooks/: useFourKnobHotkeys.ts
rpsx/src/store/: browser.ts  sequencer.ts
rpsx/src/styles/: global.css  hue.css  pixel.css
rpsx/src/types/: ui.ts
rpsx/src/utils/: envTime.ts  key.ts
rpsx/src/views/: ArrangementView.tsx  PerformView.tsx  SequencerView.tsx  SoundsView.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  fs_api.rs  lib.rs
src-tauri/src/engine/: audio.rs  graph.rs  messages.rs  params.rs  state.rs
src-tauri/src/engine/dsp/: bitcrusher.rs  delay.rs  mod.rs  mod_delay.rs  phaser.rs  reverb.rs
src-tauri/src/engine/modules/: acid303.rs  drum.rs  karplus_strong.rs  korus.rs  mod.rs  resonator_bank.rs  sampler.rs  sequencer.rs
(+30 files in other folders)
