[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
log = "0.4"
tauri-plugin-log = "2"
freeverb = "0.1"
cpal = "0.15"
crossbeam-channel = "0.5"
dasp = { version = "0.11", features = ["signal", "envelope"] }
fundsp = "0.15"
once_cell = "1.19"
rustfft = "6.1"
dirs = "5.0"
hound = "3.5"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aiff"] }

